--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -8,6 +8,7 @@
     top: 0;
     z-index: 3;
     transition: all 1s ease;
+    overflow: hidden;
 
     .wrapper{
 
